<resources>
    <string name="app_name">FoodLyt</string>
    <string name="phone_number">Enter mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="email">Email</string>
    <string name="Enter_name">Name</string>
    <string name="Enter_address">Address</string>
    <string name="title_activity_home_screen">Home_screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_cart"><u>View Cart</u></string>
    <string name="paymentDescription">Online payment recommended to reduce contact
                                between you and delivery partner <u>Proceed to pay ..</u></string>
    <string name="adrees_hint">
        <br> D/no : \n</br>
    <br> Area (or) Street name : \n</br>
    <br> Near by : \n</br>
    <br>Rajam,Srikakulam,Andhra Pradesh</br></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Sign_up"> Sign up</string>
    <string name="Login"> Login</string>
    <string name="Goback"> Go back </string>
    <string name="name">Name :  %s</string>
    <string name="mobilenum">Phone number :  %s</string>
    <string name="support_header">LEGAL, TERMS  &amp;  CONDITIONS</string>
    <string name="Cancellation">Cancellation /Refund policy</string>
    <string name="Privacy_plcy">Privacy policy </string>
    <string name="Terms_of_use">Terms of use </string>
    <string name="dialog_message">Updates are available please update .</string>
    <string name="dialog_title">FoodLyt need to be updated</string>
    <string name="about"><br>We, Foodlyt team operating to </br>
        <br>fill the gap between restaurants </br>
        <br>and customers in tier-3 cities</br>
    <br> by providing food </br>
    <br> delivery services. </br>
    <br>Right now we started </br>
    <br>our services in Rajam, </br>
    <br>Srikakulam District</br></string>
    <string name="default_notification_channel_id" translate="false">fcm_default_channel</string>
    <string name="Read_more"><a href="https://docs.google.com/document/d/e/2PACX-1vRs8G5BwBWf2xcwBIGFQZDJwUSI_820HpQpV3Z-eUmyX-s6MBBZ5xco9TZ0r4FLV9C9wyd4R95LSxGq/pub">Terms &amp; Conditions </a></string>
</resources>
