<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.chaitanya.quicksoft.glutton.viewModels.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        tools:context=".Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.8"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:background="@drawable/round_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/modifiedlogo"></ImageView>

            </LinearLayout>

            <View
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/white"
                android:gravity="center|bottom"></View>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"></TextView>

            <ProgressBar
                android:id="@+id/loginprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone"></ProgressBar>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/generate_otp_lyt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bordercolor"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_generate_otp"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_retry_bg"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/otp_login_lyt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_otp_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bordercolor"
                android:hint="@string/Enter_otp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/valdte_otp"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_retry_disenble"
                android:text="Verify Otp "
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_lnr_lyt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center"
                    android:text=" New user ? "
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/signupbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_28sdp"
                    android:gravity="center"
                    android:text="@string/Sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>