<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Support">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_color"
            android:orientation="vertical">


            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="serif"
                                        android:text="Support"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_15sdp"
                                        android:textStyle="bold"></TextView>

                                </LinearLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:foregroundGravity="center_vertical|right"
                                android:gravity="right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingEnd="@dimen/_20sdp"
                                    android:src="@drawable/ic_notifications_active_black_24dp"
                                    android:visibility="invisible"></ImageView>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/support_header" />

                <LinearLayout
                    android:id="@+id/cancel_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:minHeight="@dimen/_35sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/Cancellation" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/privacy_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:minHeight="@dimen/_35sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/Privacy_plcy" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/terms_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:minHeight="@dimen/_35sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/Terms_of_use" />

                </LinearLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:nestedScrollingEnabled="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <WebView
                        android:id="@+id/redirect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </WebView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>